BUG FIX - Tabs wrapping not working on smaller screens

--- a/src/components/ServicesPage/Services.scss
+++ b/src/components/ServicesPage/Services.scss
@@ -25,7 +25,7 @@
 
       .service-recommended-pill {
         display: inline-block;
-        background: $primary-border;
+        background: $primary-color;
         color: $primary-white;
         padding: 0 0.3rem;
         border-radius: 10px;
