--- a/src/layouts/Layout.scss
+++ b/src/layouts/Layout.scss
@@ -55,7 +55,7 @@ body {
   .tabs {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
@@ -65,6 +65,7 @@ body {
     //
 
     .tab {
+      display: inline-block;
       color: $primary-white;
       opacity: 0.8;
       font-size: 0.8rem;
